[project]
name = "airflow-multiple-cron-timetable"
authors = [
    {name = "Zakariah Nuccio", email = "zak.nuccio@crugroup.com"},
    {name = "Rokeeb Akomolafe", email = "rokeeb.akomolafe@crugroup.com"},
]
description = "Airflow timetable that combined multiple cron schedules together"
requires-python = ">=3.10"
version = "0.1.0"

dependencies = [
    "apache-airflow[github_enterprise]>=2.10.3",
]

[tool.black]
line-length = 120
